# daisy_sim

./: .gitignore  .gitmodules  CMakeLists.txt  Justfile  README.md
.github/workflows/: pages.yml  tests.yml
amp_emu/: CMakeLists.txt  gain_test.cpp
amp_emu/src/: cab_sim.cpp  cab_sim.h  jcm800.cpp  jcm800.h  main.cpp  reverse_delay.cpp  reverse_delay.h  server.cpp  server.h  wav_io.cpp  wav_io.h
amp_emu/web/: index.html
config/: local.cmake.example
docs/: ARCHITECTURE.md  index.html  new_pedal_guide.md
docs/effects/: 00_index.md  01_distortion.md  02_reverb.md  03_modulation.md  04_delay.md  05_compressor.md  06_amp_modeling.md
docs/jcm800/: README.md
docs/zoom/: acoustic-simulator-research.md  advanced-amp.html  advanced-drive.html  advanced-pitch.html  advanced-reverb.html  advanced-zoom-dsp.html  begin.html  biquad-learning-tool.html  comp-cab.html  delay-effects-research.md  dsp-lab.html  fundamentals-filters.html  fundamentals-sampling.html  fundamentals-timefx.html  index.html  kawaod.hpp  kawaod_test  kawaod_test.cpp  mverb-algorithm-explained.md  output_acsim.raw  output_clean.raw  output_metal.raw  output_ts9.raw
etc/zoom/: CSTMCAB.ZD2  CustomCab.ZD2  FLST_SEQ.ZT2  FLST_SEQ_CUSTOM.ZT2  FLST_SEQ_TEST.ZT2  MEMORY.md  MS4X12.ZD2  MS800_LT.ZD2  MS800_disasm.asm  TESTFX.ZD2  analyze_zd2.pl  build_cab_zd2.py  build_flst_seq.py  build_portable.pl  build_viewer.pl  deep_analysis.pl  dump_symbols.pl  generate_all_md.pl  index.html  serve.pl  serve.sh  update_algorithms.pl  viewer.html  zoom-ms50gplus.md  zoom_upload.c
etc/zoom/asm_cache/: ACOSIM.asm  AIR.asm  ANA234CH.asm  ANDLY_3S.asm  APANDL3S.asm  AUTOPAN.asm  AUTOWAH.asm  BENDCHO.asm  BGMK1_1U.asm  BGMK3_1U.asm  BGN4X12.asm  BGTHRTTL.asm  BG_GRID.asm  BLACKOPT.asm  BOMBER.asm  CHAMBER.asm  CHORUS.asm  CHURCH.asm  CLONECHO.asm  COMP.asm  CRNTRI3S.asm  CRY.asm  DELAY_3S.asm  DETUNE.asm  DISTPLUS.asm  DIST_1.asm  DUALDL3S.asm  DUOPHA1U.asm  DYNDRIVE.asm  DZ4X12F.asm  DZ_DRV1U.asm  EARLYREF.asm  EP_STOMP.asm  EXCITER.asm  FD2X12.asm  FDB4X10.asm  FDBMAN1U.asm  FDDLXR1U.asm  FDDX1X12.asm  FDMA2X12.asm  (+90 more)
etc/zoom/effects/01_DYNAMICS/: BLACKOPT.md  COMP.md  GRAYCOMP.md  LMT1176.md  MUTESW.md  N_GATE.md  OPTCOMP.md  RACKCOMP.md  SLWATK.md  ZNR.md  _SUMMARY.md
etc/zoom/effects/02_FILTER/: AUTOWAH.md  CRY.md  EXCITER.md  GTGEQ71U.md  GT_GEQ1U.md  LFO_FLTR.md  LOWPASSF.md  PARAEQ.md  RESONANC.md  RNDMFLTR.md  SEQFLTR.md  STEP.md  STGTGE1U.md  _SUMMARY.md
etc/zoom/effects/03_DRIVE/: ACOSIM.md  BGTHRTTL.md  BG_GRID.md  DISTPLUS.md  DIST_1.md  DYNDRIVE.md  EP_STOMP.md  GOLD_DRV.md  MTLWRLD.md  NYC_MUFF.md  OCTFUZZ.md  OUT_BST.md  RCBOOST.md  REDCRUNC.md  SPTBOOST.md  SQUEAK.md  SWEETDRV.md  TB_MK15.md  TS_DRIVE.md  UPOCTBST.md  VIOLETDS.md  ZEN_DRV.md  _SUMMARY.md
etc/zoom/effects/04_AMP/: BGMK1_1U.md  BGMK3_1U.md  DZ_DRV1U.md  FDBMAN1U.md  FDDLXR1U.md  FDMSTR1U.md  FD_TWR1U.md  HW100_1U.md  MACH301U.md  MS19591U.md  MS45OS1U.md  MS800_1U.md  ORG1201U.md  RCTORG1U.md  UK30A_1U.md  XTSBLU1U.md  _SUMMARY.md
etc/zoom/effects/05_CABINET/: BGN4X12.md  DZ4X12F.md  FD2X12.md  FDB4X10.md  FDDX1X12.md  FDMA2X12.md  HW4X12.md  MA2X12.md  MK1_1X12.md  MK3_1X12.md  MS4X12.md  MS4X12AL.md  MS4X12GB.md  ORG_4X12.md  RCT4X12.md  UK2X12.md  _SUMMARY.md
etc/zoom/effects/06_MODULATION/: ANA234CH.md  BENDCHO.md  CHORUS.md  CLONECHO.md  CRNTRI3S.md  DETUNE.md  DUOPHA1U.md  HPS.md  MONOPITC.md  OCTAVE.md  PHASER.md  PITCHSHF.md  RINGMOD.md  SLICER.md  STEREOCH.md  STONEPHA.md  SUPERCHO.md  THEVIBE.md  TREMOLO.md  VIBRATO.md  VINFLNGR.md  WRPPHASE.md  _SUMMARY.md
etc/zoom/effects/07_SFX/: AUTOPAN.md  BOMBER.md  HOTSPICE.md  LPROLL3S.md  _SUMMARY.md
etc/zoom/effects/08_DELAY/: ANDLY_3S.md  APANDL3S.md  DELAY_3S.md  DUALDL3S.md  FLTRDLY.md  ICEDLY3S.md  MODDELAY.md  PHASDL1U.md  PPDLY_3S.md  PTCHDL3S.md  RVRSDL3S.md  SLATDL3S.md  SLPBKD3S.md  SOFTEC3S.md  TAPEECHO.md  TPEC3_3S.md  _SUMMARY.md
etc/zoom/effects/09_REVERB/: AIR.md  CHAMBER.md  (+10 more)
firmware/delay/: Makefile  main.cpp
firmware/hatl_firmware/: Makefile
hardware/devboard/: SPEC.md  generate_kicad.py  generate_pcb.py  test_pcbnew.py
hardware/devboard/schematic/: dfm_devboard.kicad_pcb  dfm_devboard.kicad_prl  dfm_devboard.kicad_pro  dfm_devboard.kicad_sch
hatl/: hatl_host.h
lib/: dsp_blocks.h  effect_interface.h  hal.h  pedal_app.cpp  pedal_app.h  platform.h
lib/amp/: ms800_amp.h
lib/delay/: analog_delay_effect.cpp  analog_delay_effect.h  delay_effect.cpp
lib/drive/: dist1_effect.cpp  dist1_effect.h  overdrive_effect.h
lib/dynamics/: comp_effect.cpp  comp_effect.h
lib/modulation/: chorus_effect.cpp  flanger_effect.cpp  flanger_effect.h  phaser_effect.cpp  phaser_effect.h  tremolo_effect.cpp  tremolo_effect.h
lib/reverb/: hall_reverb_effect.cpp  hall_reverb_effect.h  reverb_effect.cpp  reverb_effect.h
scripts/: setup_windows.ps1
shared/effects/amp/: ms800_amp.cpp  ms800_amp.h  ms800_amp.md  ms800_amp_v1.cpp  ms800_amp_v1.h
shared/effects/delay/: delay_effect.cpp  delay_effect.h
shared/effects/drive/: overdrive_effect.cpp
shared/effects/modulation/: chorus_effect.h
simulator/: CMakeLists.txt
simulator/include/: app.h  audio_engine.h  daisysp_wrapper.h  dsp_processor.h  knob_widget.h  oled_widget.h  sim_hal.h
simulator/src/: app.cpp  main.cpp
simulator/src/audio/: audio_engine.cpp  daisysp_wrapper.cpp  dsp_processor.cpp
simulator/src/gui/: knob_widget.cpp  style.cpp
simulator/src/hal/: sim_hal.cpp
src/bench/: bench_host.cpp  bench_host.h  bench_protocol.h
src/bench/firmware/: Makefile  bench_firmware_hal.h  main.cpp
src/hatl/: hatl_host.cpp  hatl_protocol.h
src/hatl/firmware/: Makefile  main.cpp
src/pedal/: pedal_hal.h
src/pedal/Delay/: Delay.cpp  Makefile
src/sim/: app.cpp  app.h  daisysp_wrapper.h  main.cpp  sim_hal_adapter.h
src/sim/audio/: audio_engine.cpp
src/sitl/: app.cpp  style.h
src/sitl/audio/: daisysp_wrapper.cpp
src/sitl/gui/: oled_widget.cpp
tests/: CMakeLists.txt  test_ms800.cpp  test_ui_arrays.cpp
tools/: analyze_wav_comparison.py  plot_all_steps.py  plot_cathode.py
tools/kicad-mcp/: server.py
